// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveQueryModeSelector matches snapshot auto 1`] = `
<Blueprint3.Popover2
  boundary="clippingParents"
  captureDismiss={false}
  content={
    <Blueprint3.Menu>
      <Blueprint3.MenuItem
        className="auto auto-on"
        disabled={false}
        icon="tick"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Auto"
      />
      <Blueprint3.MenuItem
        className="on"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="On"
      />
      <Blueprint3.MenuItem
        className="off"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Off"
      />
    </Blueprint3.Menu>
  }
  defaultIsOpen={false}
  disabled={false}
  fill={false}
  hasBackdrop={false}
  hoverCloseDelay={300}
  hoverOpenDelay={150}
  inheritDarkTheme={true}
  interactionKind="click"
  minimal={true}
  openOnTargetFocus={true}
  portalClassName="live-query-mode-selector-portal"
  position="bottom-left"
  positioningStrategy="absolute"
  targetTagName="span"
  transitionDuration={300}
  usePortal={true}
>
  <Blueprint3.Button
    className="live-query-mode-selector"
    minimal={true}
  >
    <span>
      Live query:
    </span>
     
    <span
      className="auto auto-on"
    >
      Auto
    </span>
  </Blueprint3.Button>
</Blueprint3.Popover2>
`;

exports[`LiveQueryModeSelector matches snapshot on 1`] = `
<Blueprint3.Popover2
  boundary="clippingParents"
  captureDismiss={false}
  content={
    <Blueprint3.Menu>
      <Blueprint3.MenuItem
        className="auto auto-on"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Auto"
      />
      <Blueprint3.MenuItem
        className="on"
        disabled={false}
        icon="tick"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="On"
      />
      <Blueprint3.MenuItem
        className="off"
        disabled={false}
        icon="blank"
        multiline={false}
        onClick={[Function]}
        popoverProps={Object {}}
        shouldDismissPopover={true}
        text="Off"
      />
    </Blueprint3.Menu>
  }
  defaultIsOpen={false}
  disabled={false}
  fill={false}
  hasBackdrop={false}
  hoverCloseDelay={300}
  hoverOpenDelay={150}
  inheritDarkTheme={true}
  interactionKind="click"
  minimal={true}
  openOnTargetFocus={true}
  portalClassName="live-query-mode-selector-portal"
  position="bottom-left"
  positioningStrategy="absolute"
  targetTagName="span"
  transitionDuration={300}
  usePortal={true}
>
  <Blueprint3.Button
    className="live-query-mode-selector"
    minimal={true}
  >
    <span>
      Live query:
    </span>
     
    <span
      className="on auto-on"
    >
      On
    </span>
  </Blueprint3.Button>
</Blueprint3.Popover2>
`;
